@@ -1,5 +1,5 @@
 Package: distrEllipse
-Version: 2.6
+Version: 2.6.1
 Date: 2016-04-23
 Title: S4 Classes for Elliptically Contoured Distributions
 Description: Distribution (S4-)classes for elliptically contoured distributions (based on
