@@ -26,7 +26,7 @@ Loading required package: mvtnorm
 Loading required package: setRNG
 Loading required package: distr
 Loading required package: startupmsg
-:startupmsg>  Utilities for Start-Up Messages (version 0.9.2)
+:startupmsg>  Utilities for Start-Up Messages (version 0.9.3)
 :startupmsg> 
 :startupmsg>  For more information see ?"startupmsg",
 :startupmsg>  NEWS("startupmsg")
@@ -35,7 +35,7 @@ Loading required package: sfsmisc
 Loading required package: SweaveListingUtils
 :SweaveListingUtils>  Utilities for Sweave Together with
 :SweaveListingUtils>  TeX 'listings' Package (version
-:SweaveListingUtils>  0.7)
+:SweaveListingUtils>  0.7.3)
 :SweaveListingUtils> 
 :SweaveListingUtils>  NOTE: Support for this package
 :SweaveListingUtils>  will stop soon.
@@ -144,7 +144,7 @@ The following object is masked from 'package:base':
     rbind
 
 :distrEllipse>  S4 Classes for Elliptically Contoured
-:distrEllipse>  Distributions (version 2.6)
+:distrEllipse>  Distributions (version 2.6.1)
 :distrEllipse> 
 :distrEllipse>  Some functions from package 'stats' are
 :distrEllipse>  intentionally masked ---see
@@ -809,11 +809,13 @@ Warning in `[<-`(`*tmp*`, i, value = as(mixDistr[[i]], "UnivarLebDecDistribution
 > ###   dim,SphericalDistribution-method
 > ###   radDistr,SphericalDistribution-method
 > ###   radDistr<-,SphericalDistribution-method
-> ###   plot.rd,SphericalDistribution-method
+> ###   plotRd,SphericalDistribution-method rRd,SphericalDistribution-method
+> ###   dRd,SphericalDistribution-method pRd,SphericalDistribution-method
+> ###   qRd,SphericalDistribution-method plot.rd,SphericalDistribution-method
 > ###   r.rd,SphericalDistribution-method d.rd,SphericalDistribution-method
 > ###   p.rd,SphericalDistribution-method q.rd,SphericalDistribution-method
-> ###   radDistr radDistr<- plot.rd r.rd d.rd p.rd q.rd
-> ###   E,SphericalDistribution,missing,missing-method
+> ###   radDistr radDistr<- plot.rd r.rd d.rd p.rd q.rd plotRd rRd dRd pRd
+> ###   qRd E,SphericalDistribution,missing,missing-method
 > ###   var,SphericalDistribution-method
 > ###   coerce,SphericalDistribution,EllipticalDistribution-method
 > ###   show,SphericalDistribution-method
@@ -953,7 +955,7 @@ $withED
 > ###
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  5.11 0.17 5.28 NA NA 
+Time elapsed:  4.68 0.13 4.8 NA NA 
 > grDevices::dev.off()
 null device 
           1 
